# cars_de_tg_bot

./: euro_rate.py  main.py  pyproject.toml
tests/: test_main.py
